@@ -225,7 +225,7 @@ class StoreDataStep extends AbstractStep
                     if (isset($columnMappings[$externalUid])) {
                         $theRecord[$columnName] = implode(',', $columnMappings[$externalUid]);
 
-                        // Make sure not to keep the original value if no mapping was found
+                    // Make sure not to keep the original value if no mapping was found
                     } else {
                         unset($theRecord[$columnName]);
                     }
