@@ -1,0 +1,16 @@
+<?xml version="1.0" encoding="utf-8"?>
+<dataset>
+	<!-- Categories for MM relations test -->
+	<sys_category>
+		<uid>1</uid>
+		<pid>0</pid>
+		<title>Nice products</title>
+		<external_key>NICE</external_key>
+	</sys_category>
+	<sys_category_record_mm>
+		<uid_local>1</uid_local>
+		<uid_foreign>1</uid_foreign>
+		<tablenames>tx_externalimporttest_product</tablenames>
+		<fieldname>categories</fieldname>
+	</sys_category_record_mm>
+</dataset>
